--- a/0312-study-props/src/Wrapper.css
+++ b/0312-study-props/src/Wrapper.css
@@ -5,5 +5,16 @@
     overflow: auto;
     align-items: center;
     justify-content: flex-start;
-    height: 500px;
+    height: auto;
+}
+
+.Wrapper::-webkit-scrollbar {
+    display: none;
+    width: 0px;
+}
+.Wrapper::-webkit-scrollbar-thumb {
+    background-color: #2f3542;
+}
+.Wrapper::-webkit-scrollbar-track {
+    background-color: grey;
 }
