--- a/0315-event-handling/src/components/ex/HandlerInput.css
+++ b/0315-event-handling/src/components/ex/HandlerInput.css
@@ -1,4 +1,4 @@
-.HandlerInput {
+/* .HandlerInput {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -10,4 +10,4 @@
     flex-direction: row;
     height: 20px;
     width: auto;
-}
+} */
